syntax = "proto3";

package iotfsdb;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "iotfsdb-enums.proto";
import "iotfsdb-types.proto";

option java_package = "org.huebert.iotfsdb.api.proto";

service SeriesService {
  rpc CloneSeries(CloneSeriesRequest) returns (CloneSeriesResponse);
  rpc CreateSeries(CreateSeriesRequest) returns (CreateSeriesResponse);
  rpc DeleteSeries(DeleteSeriesRequest) returns (DeleteSeriesResponse);
  rpc FindSeries(FindSeriesRequest) returns (FindSeriesResponse);
  rpc UpdateDefinition(UpdateDefinitionRequest) returns (UpdateDefinitionResponse);
  rpc UpdateMetadata(UpdateMetadataRequest) returns (UpdateMetadataResponse);
}

service DataService {
  rpc ExportData(ExportDataRequest) returns (ExportDataResponse);
  rpc FindData(FindDataRequest) returns (FindDataResponse);
  rpc ImportData(ImportDataRequest) returns (ImportDataResponse);
  rpc InsertData(stream InsertDataRequest) returns (stream InsertDataResponse);
}

message CloneSeriesRequest {
  string source_id = 1;
  string destination_id = 2;
}

message CreateSeriesRequest {
  Series series = 1;
}

message DeleteSeriesRequest {
  string id = 1;
}

message ExportDataRequest {
  SeriesCriteria criteria = 1;
}

message FindDataRequest {
  SeriesCriteria criteria = 1;
  TimeRange time_range = 2;
  oneof size_option {
    google.protobuf.Int64Value interval_ms = 3;
    google.protobuf.Int32Value size = 4;
  }
  oneof null_option {
    NullHandler null_handler = 5;
    google.protobuf.DoubleValue null_value = 6;
  }
  bool high_precision = 7;
  Reducer time_reducer = 8;
  Reducer series_reducer = 9;
}

message FindSeriesRequest {
  SeriesCriteria criteria = 1;
}

message ImportDataRequest {
  File file = 1;
}

message InsertDataRequest {
  SeriesData data = 1;
  Reducer reducer = 3;
}

message UpdateDefinitionRequest {
  string id = 1;
  SeriesDefinition definition = 2;
}

message UpdateMetadataRequest {
  string id = 1;
  map<string, string> metadata = 2;
}

message CloneSeriesResponse {

}

message CreateSeriesResponse {

}

message DeleteSeriesResponse {

}

message FindDataResponse {
  repeated SeriesData data = 1;
}

message FindSeriesResponse {
  repeated Series series = 1;
}

message ImportDataResponse {

}

message InsertDataResponse {

}

message UpdateDefinitionResponse {

}

message UpdateMetadataResponse {

}

message ExportDataResponse {
  File file = 1;
}
